--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -9,6 +9,7 @@
     header {
         display: flex;
         justify-content: space-between;
+        padding: 30px;
         @include box
     }
 
