--- a/src/index.scss
+++ b/src/index.scss
@@ -18,16 +18,16 @@ button{
 }
 
 @font-face {
-  font-family: work-sans;
+  font-family: work-sans-bold;
   src: url(./fonts/work-sans/static/WorkSans-Bold.ttf);
 }
 
 @font-face {
-  font-family: work-sans;
+  font-family: work-sans-light;
   src: url(./fonts/work-sans/static/WorkSans-Light.ttf);
 }
 
 @font-face {
-  font-family: work-sans;
+  font-family: work-sans-normal;
   src: url(./fonts/work-sans/static/WorkSans-Regular.ttf);
 }
