--- a/src/pages/dashboard/userDetails/userdetails.scss
+++ b/src/pages/dashboard/userDetails/userdetails.scss
@@ -1,14 +1,7 @@
-$text-color: #213F7D; 
+@import '_variables';
+@import '_mixins';
 
-@mixin main-text {
-    color: $text-color;
-    font-family: Work-Sans-normal;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 0px;
-    text-align: left;
-  }
+
 
 .general-details{
 height: 210px;
