--- a/_variables.scss
+++ b/_variables.scss
@@ -1,4 +1,7 @@
 $box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
 $background: #ffffff;
 $action-color: #39CDCC;
-$text-color: #213F7D; 
+$text-color: #213F7D;
+$regular-font-family: work-sans-normal;
+$bold-font-family: work-sans-bold;
+$login-font-family: Avenir;
