--- a/_mixins.scss
+++ b/_mixins.scss
@@ -7,6 +7,11 @@
     text-align: $text-align;
   }
 
+  @mixin box {
+    background-color: $background;
+    box-shadow: $box-shadow;
+  }
+
   @mixin display-flex {
     display: flex;
     justify-content: space-between;
