--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -36,8 +36,48 @@ color: $text-color;
 
   button {
     background-color: $action-color;
-    color: #ffffff;
+    color: $background;
     padding: 2.5px 10px;
     border-radius: 0 8px 8px 0;
   }
+}
+
+nav{
+    .nav-header-top{
+
+    }
+    >ul{
+        padding-left: 10px;
+    }
+
+> ul >li{
+    margin-top: 41px;
+    
+
+    ul{
+        padding-left: 0;
+        margin-left: 0;
+
+        li{
+            margin-top: 31px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            &:nth-child(1){
+                margin-top: 20px;
+            }
+        }
+
+    }
+
+}
+}
+
+.table-pagination{
+    @include display-flex;
+    margin-top: 23px
+}
+
+@media screen and (max-width: 980px) {
+    
 }
