--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,11 +1,12 @@
 @import 'variables';
+@import '_mixins';
 
-@mixin box {
-  background-color: $background;
-  box-shadow: $box-shadow;
+.dashboard{
+  font-family: $regular-font-family;
+  border: 1px solid red;
 }
 
-.dashboard-body {
+.dashboard-body{
   display: flex;
 
   header {
