finally implemented the view details popover using bootstrap

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -3,7 +3,6 @@
 
 .dashboard{
   font-family: $regular-font-family;
-  border: 1px solid red;
 }
 
 .dashboard-body{
@@ -35,6 +34,7 @@
   }
 
   .dashcards {
+    width: 100%!important;
     display: flex;
     justify-content: space-between;
   }
