--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -75,7 +75,9 @@ nav {
 
 .table-pagination {
     @include display-flex;
-    margin-top: 23px
+    flex-wrap: wrap;
+    margin-top: 23px;
+    width: 90%
 }
 
 @media screen and (max-width: 980px) {
